tests/syntax-error/ImplicitForall.vix
test : forall @n. int
test = 0
